# liyedong.github.io

./: 404.html  README.md  build.cmd  generate_index.py  index.html  mkdocs.yml  pyproject.toml  serve.cmd  sitemap.xml
docs/: index.md
docs/PDF/: index.md
docs/PDF笔记/: index.md
docs/docker/: docker笔记.md
docs/go/golang/: GO语言基础入门学习笔记.md
docs/k8s和容器/: Helm 日常使用与封装自定义应用发布笔记.md  K8S之证书管理.md  KubeSphere体验.md  dockerc打包可执行文件.md  k3s部署(基于debian).md  kubeadm离线安装.md  kubeadm部署k8s（需要魔法）.md  kubeasz离线部署高可用kubernetes.md  基于EFK实现kubernetes集群的日志平台（扩展）.md  面试经历整理.md
docs/k8s和容器/CICD/: Drone流水线.md  Fastapi+vue流水线.md  Gitea安装.md  Gogs安装.md  java流水线.md  (+4 more)
docs/mysql8/: mysql8学习.md
docs/nginx/: Nginx学习.md  client.pfx
docs/redis/: Redis学习.md
docs/分享/: 10.ChatGPT 中文调教指南.md  2.ai换脸.md  3.人工智能网址集合（国内）.md  4.国外网址.md  5.使用场景.md  6.询问的一些技巧.md  7.三步搭建自己专属的gpt.md  8.文字转ppt.md  9.ChatGLM3-清华开源大模型.md  ai工具的使用和一些使用场景的分享.md
docs/安全/: Burp Suite抓包工具.md
docs/工具使用/: 2024年6月总结.md  2024年度总结.md  Clash for windows.md  Clash for windows使用.md  Grafana.md  Netstat 与 ss 命令使用笔记.md  SwitchyOmega智能代理.md  docker-desktop安装.md  nmap使用.md  windows桌面优化.md  工具收集.md  我的个人规划.md  项目管理学习.md
docs/开发/: FastApi学习.md  GithubPage搭建博客.md  mkdocs详细配置.md
docs/操作系统/: windows文件复制带权限.md
docs/数据库笔记/: Elasticsearch 教程.md
docs/无法同步pdf/: index.md
docs/浏览器书签收藏/: 地址1.md  安娜档案密钥.md
docs/监控/: zabbix监控4.2.md
docs/认证相关/: credly查看勋章.md
redis/Redis学习/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/PDF/: index.html
site/PDF笔记/: index.html
site/images/: linux-tutorial
(+1108 files in other folders)
