[tool.poetry]
name = "liyedong-github-io"
version = "0.1.0"
description = ""
authors = ["liyedong <lyd1446034545@gmail.com>"]
readme = "README.md"
packages = [{include = "liyedong"}]

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.46"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
